--- a/javascript_object.html
+++ b/javascript_object.html
@@ -19,7 +19,7 @@
 		// 	last_name : "Shohanuzzaman",
 		// 	age : 22,
 		// 	eyecolor : "black",
-		// 	profession : "student",
+		// 	profession : "student",Ja
 		// fullname : function(){
 		// 		return this.first_name + " " + this.last_name;
 		// 	}
