--- a/javascript_for_loop.html
+++ b/javascript_for_loop.html
@@ -21,11 +21,24 @@
 			// }
 			// document.getElementById('test').innerHTML = x;
 
+			// function myFunction(){
+			// 	var x = 0;
+			// 	var i;
+			// 	for(i = 1; i<10; i++){
+			// 	 	x = x + i + "</br>";
+			// 	}
+			// 	document.getElementById('test').innerHTML = x;
+
+			// }
+
+
 			function myFunction(){
-				var x=0;
-				var i;
-				for(i = 1; i<10; i++){
-				 	x = x + i + "</br>";
+				var x = 0;
+				var i= 1;
+
+				while(i < 10){
+					x = x+i + "</br>";
+					i++;
 				}
 				document.getElementById('test').innerHTML = x;
 
