--- a/javascript_object.html
+++ b/javascript_object.html
@@ -14,24 +14,24 @@
 
 
 	<script>
-		// var person = {
-		// 	first_name : "Md",
-		// 	last_name : "Shohanuzzaman",
-		// 	age : 22,
-		// 	eyecolor : "black",
-		// 	profession : "student",Ja
-		// fullname : function(){
-		// 		return this.first_name + " " + this.last_name;
-		// 	}
-		// };
-
 		var person = {
-			first_name: "md", last_name: "Shohanuzzaman", age:22, eyecolor:"blue", profession:"student",
-
-			fullname : function(){
+			first_name : "Md",
+			last_name : "Shohanuzzaman",
+			age : 22,
+			eyecolor : "black",
+			profession : "student",
+		fullname : function(){
 				return this.first_name + " " + this.last_name;
 			}
 		};
+
+		// var person = {
+		// 	first_name: "md", last_name: "Shohanuzzaman", age:22, eyecolor:"blue", profession:"student",
+
+		// 	fullname : function(){
+		// 		return this.first_name + " " + this.last_name;
+		// 	}
+		// };
 
 
 		document.getElementById('show_object').innerHTML = person.first_name + " " + person.last_name + " age " + person.age + " eyecolor " + person.eyecolor + " profession " + person.profession + ".";
