--- a/javascript_constructor_function.html
+++ b/javascript_constructor_function.html
@@ -26,7 +26,9 @@
 
 	myFriend.nationality = "Bangladeshi";
 
-	document.getElementById('show').innerHTML = "I am " + constructor.firstName + " " + constructor.lastName + "age is " + constructor.age + " eye color is"+ constructor.eyeColor + " My friend is " + myFriend.firstName + " " + myFriend.lastName + "age is " + myFriend.age + "eye color is " + myFriend.eyeColor + " nationality is " + myFriend.nationality;
+	myFunction.prototype.language = "Bengali";
+
+	document.getElementById('show').innerHTML = "I am " + constructor.firstName + " " + constructor.lastName + "age is " + constructor.age + " eye color is"+ constructor.eyeColor + " My friend is " + myFriend.firstName + " " + myFriend.lastName + "age is " + myFriend.age + "eye color is " + myFriend.eyeColor + " nationality is " + myFriend.nationality + " language is " + myFriend.language;
 	
 
 
